# vec-language

./: CMakeLists.txt  README.md
examples/: max.vl  primes.vl
src/: ast.h  linked_list.c  linked_list.h  main.c  parser.y  scanner.l  vector.c  vector.h
